# Gazebo_rodos_plugin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  gazebo.sh  rodos_plugin.cc  vel.cc
cmake/: Findrodos.cmake
example/src/: cessna.cpp  example.cpp  glider.cpp
example/world/: Glider.world  SimulationRodosWorld.world  cessna.world
example/world/Glider/: model.sdf
example/world/Glider/meshes/: Wing.dae
example/world/Glider/meshes/stl/: LeftAileron.stl  RightAileron.stl
gazebo_connector/: CMakeLists.txt
gazebo_connector/src/: rodos_plugin.cc
include/: CessnaGUIPlugin.h  CessnaPlugin.h  GazeboTopic.h  rodos_plugin.h
rodos_connector/: CMakeLists.txt
rodos_connector/src/: plugin_connector.cpp
src/: CessnaGUIPlugin.cc  CessnaPlugin.cc  rodos_plugin.cc  rodos_plugin.cpp
world/: Gleider.world  Glider.world
world/Gleider/: model.config  model.sdf
world/Gleider/meshes/: Elevator.dae  RightAileron.dae
world/Gleider/meshes/stl/: Elevator.stl  Rudder.stl  Tailplane.stl
world/Glider/: model.sdf
world/Glider/meshes/: LeftAileron.dae  Rudder.dae  Tailplane.dae
world/Glider/meshes/stl/: Wing.stl
